@@ -1,3 +1,9 @@
+== Version ?????? (tzdata v2011b) - ???????????
+
+* Updated to tzdata version 2011b
+  (http://article.gmane.org/gmane.comp.time.tz/3599).
+
+
 == Version 0.3.24 (tzdata v2010o) - 15-Jan-2011
 
 * Updated to tzdata version 2010o
